[package]
name = "trunkrs"
version = "0.2.5"
license = "MIT"
keywords = ['logging']
categories = ["logging"]
description = "Small logging setup library."

[lib]
path = "src/trunk.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features=["env-filter"]}
