[package]
name = "trunkrs"
version = "0.2.7"
license = "MIT"
keywords = ['logging']
categories = ["logging"]
description = "Small logging setup library."

[lib]
path = "src/trunk.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
chrono = "0.4.24"
env_logger = "0.10.0"
log = "0.4.17"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features=["env-filter"]}
